Bug 168445Eclipse fails to startup because the library swt-win32-3235.dll couldn't be loaded.